cargo-features = ["different-binary-name"]

[[bin]]
name = "monster-viewer"
filename = "monster-viewer"
path = "src/main.rs"

[package]
name = "monster-viewer-gui"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dll-syringe = "0.17.1"
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", features = ["use-std"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
mimalloc = "0.1.48"
eframe = { version = "0.33.3", features = ["persistence"] }
arc-swap = "1.8.0"
egui_extras = "0.33.3"
num-format = "0.4.4"
glam = { version = "0.32.0", features = ["serde"] }
circular-buffer = "1.2.0"
serde_json = "1.0.149"
egui = { version = "0.33.3", features = ["persistence"] }
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28.0"
