[package]
name = "monster-viewer"
version = "0.2.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
glam = { version = "0.32.0", features = ["serde"] }
ilhook = { version = "2.3.0", default-features = false, features = ["x86"] }
mimalloc = "0.1.48"
postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
windows = { version = "0.*", features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
] }
